- fixed language icon width; - fixed word-spacing of accordion cards content & chart pages content;

--- a/src/components/Cards/CardBase/CardBase.module.css
+++ b/src/components/Cards/CardBase/CardBase.module.css
@@ -93,6 +93,9 @@
   width: 70%;
   padding-bottom: 20px;
   text-align: justify;
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  word-spacing: -0.05rem;
   line-height: 1.5rem;
 }
 
